--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 @import 'bootstrap/dist/css/bootstrap.css';
+@import 'slick-carousel/slick/slick.css'; 
+@import 'slick-carousel/slick/slick-theme.css';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap');
 
 body {
