--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import 'aos/dist/aos.css';
 @import 'bootstrap/dist/css/bootstrap.css';
 @import 'slick-carousel/slick/slick.css'; 
 @import 'slick-carousel/slick/slick-theme.css';
