--- a/src/index.css
+++ b/src/index.css
@@ -113,8 +113,8 @@ body {
 }
 
 .whitecopy {
-  color: #FFFFFF;
-  font-size: 20px;
+  color: #ffffff;
+  font-size: 1rem;
   font-weight: 400;
 }
 
