--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 a:hover {
-  color: #ffffff;
+  color: #0a58ca;
 }
 .slider-slide {
   background-position: center;
