fixed link hover style for only home page

--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@
 body {
   font-family: 'Poppins', sans-serif;
 }
-a:hover {
-  color: #0a58ca;
+main a:hover {
+  color: #ffffff;
 }
 .slider-slide {
   background-position: center;
